fix(container-card): don't draw double borders

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -1,3 +1,8 @@
+flowbox.not-activatable flowboxchild:hover,
+flowbox.not-activatable flowboxchild:active {
+  background-color: transparent;
+}
+
 containercard.not-running {
   background-color: var(--secondary-sidebar-bg-color);
 }
